@@ -1,3 +1,9 @@
+2011-09-15  Gary Funck  <gary@intrepid.com>
+
+	Fix ICE involving shared bit field accesses.
+	* tree.c (build3_stat): Propagate TEEE_SHARED()
+	and TREE_STRICT() and TREE_RELAXED() flags, if applicable.
+
 2011-09-13  Gary Funck  <gary@intrepid.com>
 
         Merge trunk version 178795 into gupc branch.
