@@ -1,3 +1,10 @@
+2011-09-15  Gary Funck  <gary@intrepid.com>
+
+	Fix ICE involving shared bit field accesses.
+	* upc-genericize.c (upc_simplify_shared_ref): Improve
+	"shared bit fields not yet implemented" error message
+	by adding file/line number location.
+
 2011-09-13  Gary Funck  <gary@intrepid.com>
 
 	* upc-tree.def (UPC_FORALL_STMT): Fix spelling error in comments.
